--- a/Modulo0Kata.ipynb
+++ b/Modulo0Kata.ipynb
@@ -113,6 +113,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Niveles de Oxígeno\n",
+    "Muestra diez minutos de niveles de oxígeno en tu nave."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
@@ -138,6 +146,14 @@
     "\n",
     "plt.bar(range(len(oxy_nums)), oxy_nums)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Velocidad de la nave\n",
+    "Muestra los segundos necesarios para pasar de 0 a 11200 metros por segundo, dada la aceleración de la nave en metros por segundo."
    ]
   },
   {
