Cambio de formato en fecha
Se cambió el formato de fecha por uno mas personalizado (día, mes y año)

--- a/Modulo1Kata.ipynb
+++ b/Modulo1Kata.ipynb
@@ -2,21 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "La fecha de hoy es: 2022-02-12\n"
+      "La fecha de hoy es: 14 Feb, de 2022\n"
      ]
     }
    ],
    "source": [
     "from datetime import date\n",
-    "\n",
-    "print(\"La fecha de hoy es: \" + str(date.today()))"
+    "x = date.today()\n",
+    "print(\"La fecha de hoy es: \" + str(x.day) + \" \" + x.strftime(\"%b\") + \", de \" + str(x.year))"
    ]
   },
   {
